@@ -11,6 +11,7 @@ ver 0.16 (20??/??/??)
   - allow changing replay gain mode on-the-fly
   - omitting the range end is possible
 * archive:
+  - iso: renamed plugin to "iso9660"
   - zip: renamed plugin to "zzip"
 * input:
   - lastfm: obsolete plugin removed
